2005-02-03  David Evers  <extsw@appliedgenerics.com>

	* process-unix.c (unix_send_process): Flush the last chunk, even
	when the pipe is blocked.

2005-02-03  Ben Wing  <ben@xemacs.org>

	* dumper.c:
	* dumper.c (pdump_file_try):
	* dumper.c (DUMP_SLACK):
	* dumper.c (pdump_load):
	Include extra DUMP_SLACK when allocating space for exe path.
	
	* glyphs-eimage.c:
	Reformat comment.

	* sysproc.h:
	Delete out-of-date comment about abort.

2005-02-03  Jerry James  <james@xemacs.org>

	* dumper.c (pdump_load_finish): Cast to Rawbyte * instead of char *.

2005-02-03  Jerry James  <james@xemacs.org>

	* config.h.in: Remove #define this c_this.
	* device-x.c (construct_name_list): Rename this -> this_widget.
	* eval.c (wants_debugger): Rename this -> curr.
	* frame.c (delete_frame_internal): Rename this -> this_frame.
	* gui-gtk.c (ungcpro_popup_callbacks): Rename this -> this_callback.
	* gui-gtk.c (get_gcpro_popup_callbacks): Ditto.
	* gui-x.c (gcpro_popup_callbacks): Ditto.
	* gui-x.c (ungcpro_popup_callbacks): Ditto.
	* lisp.h: Remove #undef this and #defin this c_this.
	* redisplay.c (generate_fstring_runes): Rename this -> this_str.

2005-02-01  Jerry James  <james@xemacs.org>

	* dumper.c: Olivier Galibert's changes to enable dumping data via
	a Java-like serialization/deserialization process.

	* number.c: OG's bignum conversion functions.  Also, use the
	dumping capability to initialize bigfloat-max-prec sanely.

	* alloc.c:
	* buffer.c:
	* bytecode.c:
	* console.c:
	* data.c:
	* device.c:
	* elhash.c:
	* eval.c:
	* events.c:
	* extents.c:
	* file-coding.c:
	* frame.c:
	* glyphs.c:
	* lstream.c:
	* marker.c:
	* mule-charset.c:
	* mule-coding.c:
	* objects.c:
	* profile.c:
	* rangetab.c:
	* redisplay.c:
	* specifier.c:
	* unicode.c:
	* window.c:
	Add curly braces to the data2 arg of each memory_description
	initializer.  Add a union member name to each reference to data2.

	* lrecord.h: Ditto.  OG changes to add and document